Nested tables (#19)
* support nested table rendering; update dependencies

* Fixed page break

* Add support for `keep-together` attribute in tables to prevent splitting across pages.

* Add support for `keep-together` attribute in tables to prevent splitting across pages.

* Added spotless plugin and fiel formatting

* Added style for arabic small gray text

* Rename style name to "MultiColumnNestedTable"

* keep admonition tables always together